--- a/views/index.jade
+++ b/views/index.jade
@@ -6,27 +6,44 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.9.0/sha256.min.js")
   body
 
 block content
-  div.row
-    form.col.s10(action="/calHash" method="POST")
-      div.input-field.row.s6
+  script.
+    function calculateHash () {
+      let blockhash = document.getElementById("blockhash").value;
+      let prevhash = document.getElementById("prevhash").value;
+      let blockheight = document.getElementById("blockheight").value;
+      let nonce = document.getElementById("nonce").value;
+      let minerid = document.getElementById("minerid").value;
+
+      hashString = blockhash + prevhash + blockhash + nonce + minerid;
+      let answer = sha256(hashString);
+      console.log(typeof(answer));
+      console.log(answer);
+      document.getElementById("answerblock").innerHTML = " hash answer = " + answer;
+    }
+  div.row.container
+    form.col.s12
+      div.input-field.s6
         input.validate(id="blockhash" name="blockhash" type="text")
         label(for="blockhash") Blockhash
-      div.input-field.row.s6
+      div.input-field.s6
         input.validate(id="prevhash" name="prevhash" type="text")
         label(for="prevhash") Prevhash
-      div.input-field.row.s6
+      div.input-field.s6
         input.validate(id="blockheight" name="blockheight" type="text")
         label(for="blockheight") Blockheight
-      div.input-field.row.s6
+      div.input-field.s6
         input.validate(id="nonce" name="nonce" type="text")
         label(for="nonce") nonce
-      div.input-field.row.s6
+      div.input-field.s6
         input.validate(id="minerid" name="minerid" type="text")
         label(for="minerid") MinerId
-      div
-        button.btn.waves-effect.waves-light(type="submit") Calculate hash
-  div.row 
-    h5 hash answer = #{ result }
+      div.center
+        button.btn.waves-effect.waves-light(type="button" onclick="calculateHash()") Calculate hash
+      div.row.center
+        h5 hash answer =
+        h5(id="answerblock") nothing yet
+      
